Finished PUT and DELETE requests, updated URI
