# routes/users.js
@@ -4,11 +4,12 @@ const usersController = require('../controllers/users');
 
 router.get(
     '/',
-    /* #swagger.description = 'Get all contacts'
+    /* #swagger.description = 'Get all users'
      #swagger.responses[200] = {
-       description: 'List of contacts',
+       description: 'List of users',
        schema: [
             {
+                "_id": "6657e82ded56c2256c29b108",
                 "username": "fit_jane",
                 "email": "jane@example.com",
                 "avatarUrl": "https://example.com/avatar/jane.jpg",
@@ -20,6 +21,7 @@ router.get(
             }
        ]
     }
+    #swagger.responses[500] = { description: 'Internal Server Error' }
     */
     usersController.getAll
 );
@@ -30,11 +32,12 @@ router.get('/:id',
         #swagger.parameters['id'] = { 
             description: 'User ID', 
             type: 'string', 
-            example: '6830e82ded56c2256c29b108' 
+            example: '6657e82ded56c2256c29b108' 
         }
         #swagger.responses[200] = {
             description: 'User found',
             schema: {
+                "_id": "6657e82ded56c2256c29b108",
                 "username": "fit_jane",
                 "email": "jane@example.com",
                 "avatarUrl": "https://example.com/avatar/jane.jpg",
@@ -45,7 +48,9 @@ router.get('/:id',
                 "bio": "Lifelong runner and HIIT fan"
             }
         }
+        #swagger.responses[400] = { description: 'Invalid user ID format.' }
         #swagger.responses[404] = { description: 'User not found' }
+        #swagger.responses[500] = { description: 'Internal Server Error' }
     */
 usersController.getSingle
 );
@@ -53,10 +58,10 @@ usersController.getSingle
 
 router.post(
     '/',
-    /* #swagger.description = 'Create a new contact'
+    /* #swagger.description = 'Create a new user'
         #swagger.parameters['body'] = {
             in: 'body',
-            description: 'Contact data',
+            description: 'User data',
             required: true,
             schema: {
                 "username": "fit_jane",
@@ -70,26 +75,33 @@ router.post(
             }
         }
         #swagger.responses[201] = { 
-            description: 'Contact created',
+            description: 'User created',
             schema: {
-                "acknowledged": true,
-                "insertedId": "6830e82ded56c2256c29b108"
+                "_id": "6657e82ded56c2256c29b108",
+                "username": "fit_jane",
+                "email": "jane@example.com",
+                "avatarUrl": "https://example.com/avatar/jane.jpg",
+                "fitnessGoals": "Build strength and endurance",
+                "friends": [],
+                "routines": [],
+                "joinedAt": "2024-10-01T10:00:00Z",
+                "bio": "Lifelong runner and HIIT fan"
             }
         }
-        #swagger.responses[400] = { description: 'Missing a required field.' }
+        #swagger.responses[400] = { description: 'Missing required field.' }
+        #swagger.responses[500] = { description: 'Internal Server Error' }
     */ 
     
 usersController.createUser);
 
 
-// Not tested yet.
 router.put(
     '/:id',
     /* #swagger.description = 'Update a User by ID'
         #swagger.parameters['id'] = { 
             description: 'User ID', 
             type: 'string', 
-            example: '6830e82ded56c2256c29b108' 
+            example: '6657e82ded56c2256c29b108' 
         }
         #swagger.parameters['body'] = {
             in: 'body',
@@ -106,10 +118,13 @@ router.put(
                 "bio": "Lifelong runner and HIIT fan"
             }
         }
-        #swagger.responses[204] = { description: 'User updated' }
+        #swagger.responses[204] = { description: 'User updated (no content)' }
+        #swagger.responses[400] = { description: 'Invalid user ID format.' }
         #swagger.responses[404] = { description: 'User not found' }
+        #swagger.responses[500] = { description: 'Internal Server Error' }
   */
 usersController.updateUser);
+
 
 router.delete(
     '/:id',
@@ -117,10 +132,12 @@ router.delete(
         #swagger.parameters['id'] = { 
             description: 'User ID', 
             type: 'string', 
-            example: '6830e82ded56c2256c29b108' 
+            example: '6657e82ded56c2256c29b108' 
         }
-        #swagger.responses[204] = { description: 'User deleted' }
+        #swagger.responses[200] = { description: 'User deleted successfully.' }
+        #swagger.responses[400] = { description: 'Invalid user ID format.' }
         #swagger.responses[404] = { description: 'User not found' }
+        #swagger.responses[500] = { description: 'Internal Server Error' }
     */
 usersController.deleteUser);
     
